style: 데모 사이트 퍼블리싱

--- a/index.html
+++ b/index.html
@@ -9,14 +9,33 @@
 </head>
 
 <body>
-  <main class="container">
-    <section class="section-1">
+  <main class="container" data-rivus data-rivus-start="top top" data-rivus-end="bottom bottom" data-rivus-enter="false">
+    <div class="background"></div>
+    <section class="sc-kv" data-rivus data-rivus-start="top top" data-rivus-end="bottom top" data-rivus-enter="false">
+      <h1><span>NOOLNOO DEV</span></h1>
     </section>
-    <section class="section-2" data-rivus data-rivus-start="top bottom" data-rivus-end="bottom bottom"
+    <section class="sc-info" data-rivus data-rivus-start="top bottom" data-rivus-end="bottom bottom"
       data-rivus-enter="false" data-rivus-progress="0">
+      <div class="sticky-area">
+        <p class="front-text">
+          <span>안녕하세요, 인터랙션 디벨로퍼 눌누입니다. 👋</span>
+          <span>저는 코드로 화면을 움직임을 만들고,</span>
+          <span>사용자에게 보는 UI가 아닌</span>
+          <span><strong>느껴지는 경험</strong>이 되도록 고민합니다.</span>
+        </p>
+        <p class="back-text">
+          안녕하세요, 인터랙션 디벨로퍼 눌누입니다. 👋<br />
+          저는 코드로 화면을 움직임을 만들고,<br />
+          사용자에게 보는 UI가 아닌<br />
+          <strong>느껴지는 경험</strong>이 되도록 고민합니다.
+        </p>
+      </div>
     </section>
-    <section class="section-1">
+    <section class="sc-image" data-rivus data-rivus-start="top bottom" data-rivus-end="bottom bottom"
+      data-rivus-enter="false" data-rivus-progress="0">
+      <div class="sticky-area"><img src="./assets/image.jpg" alt="크리스마스 이미지" /></div>
     </section>
+    <section class="sc-end"></section>
   </main>
   <script src="./main.js" type="module"></script>
 
